--- a/src/components/layout/header/header.css
+++ b/src/components/layout/header/header.css
@@ -1,6 +1,9 @@
 header {
   padding: 20px;
-  background-color: var(--white);
+  background-color: var(--background-header);
+  position: fixed;
+  top:0;
+  width: 100vw;
 
   & > div {
     display: flex;
