--- a/src/components/medicaments/page.css
+++ b/src/components/medicaments/page.css
@@ -1,6 +1,14 @@
 .container.medicaments {
   margin-top: 30px;
 
+  & .panel {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    margin-bottom: 30px;
+  }
+  
+
   & .subtitle {
     max-width: 400px;
   }
