--- a/src/style.css
+++ b/src/style.css
@@ -3,16 +3,21 @@
 :root {
   --white: #ffffff;
   --black: #1d1d1b;
-  --grey: #494948;
+  --grey: #727272;
+  --grey-200: #E4E4E4;
+  --grey-400: #F9F9F9;
+  --grey-300: #F2F2F2;
+  --background-header: #f6f6f6;
 }
 
 * {
   color: var(--black);
+  font-size: 14px;
   font-family: Arial, Helvetica, sans-serif;
 }
 
 #app {
-  background-color: #f6f6f6;
+  background-color: var(--white);
   min-height: 100vh;
 }
 
@@ -29,4 +34,32 @@ h1 {
 .subtitle {
   font-size: 14px;
   color: var(--grey);
+}
+
+main {
+  margin-top: 90px !important;
+}
+
+button {
+  padding: 8px 13px;
+  border-radius: 4px;
+  cursor: pointer;
+  align-items: center;
+  display: flex;
+  gap: 12px;
+  &.btn-primary {
+    background-color: var(--black);
+    color: var(--white);
+    & * {
+      color: var(--white);
+    }
+  }
+
+  &.btn-secondary {
+    background-color: var(--grey-300);
+  }
+
+  &:disabled {
+    opacity: 0.5;
+  }
 }
