--- a/src/components/medicaments/ui/table/table.css
+++ b/src/components/medicaments/ui/table/table.css
@@ -16,6 +16,28 @@ table {
         &.loading {
             text-align: center;
         } 
+
+        & .quantitySteper {
+            display: flex;
+            gap: 5px;
+            
+            & > input[type="number"] {
+                width: 50px;
+                text-align: center;
+
+                /* RETIRER LE STYLE DE L'INPUT */
+                &::-webkit-outer-spin-button,
+                &::-webkit-inner-spin-button {
+                    -webkit-appearance: none;
+                    margin: 0;
+                }
+            }
+        }
+
+        & .action-container {
+            display: flex;
+            gap: 12px;
+        }
     }
     
     th:first-child, td:first-child {
