--- a/src/style.css
+++ b/src/style.css
@@ -20,6 +20,7 @@
   color: var(--black);
   font-size: 14px;
   font-family: Arial, Helvetica, sans-serif;
+  box-sizing: border-box;
 }
 
 #app {
@@ -53,6 +54,8 @@ button {
   align-items: center;
   display: flex;
   gap: 12px;
+  text-align: center;
+  justify-content: center;
   &.btn-primary {
     background-color: var(--black);
     color: var(--white);
@@ -87,4 +90,16 @@ button {
   &:disabled {
     opacity: 0.5;
   }
+}
+
+.form-control {
+  padding: 10px 12px;
+  border-radius: 4px;
+  border: 1px solid var(--grey-200);
+}
+
+.separator {
+  width: 100%;
+  height: 1px;
+  background-color: var(--grey-300);
 }
