--- a/src/components/medicaments/ui/form/form.css
+++ b/src/components/medicaments/ui/form/form.css
@@ -27,6 +27,8 @@
             display: flex;
             flex-direction: row;
         } 
+
+        
     }
 
     & .selection {
@@ -40,5 +42,9 @@
 
     h2 {
         font-size: 18px;
+    }
+
+    & .read-only {
+        background-color: var(--grey-300);
     }
 }
